WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303095
Fix http/tests/security/cross-frame-access-call.html with site isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=303095
Summary
Fix http/tests/security/cross-frame-access-call.html with site isolation enabled
Rob Buis
Reported
2025-11-25 07:01:04 PST
Fix http/tests/security/cross-frame-access-call.html with site isolation enabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2025-11-25 07:02:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54445
Radar WebKit Bug Importer
Comment 2
2025-12-02 07:01:13 PST
<
rdar://problem/165693403
>
EWS
Comment 3
2025-12-06 05:30:40 PST
Committed
304046@main
(832ae665098c): <
https://commits.webkit.org/304046@main
> Reviewed commits have been landed. Closing PR #54445 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug