Fix http/tests/security/cross-frame-access-call.html with site isolation enabled https://bugs.webkit.org/show_bug.cgi?id=303095

Reviewed by Chris Dumez.

Fix a casting problem with site-isolation where the dynamicDowncast
to LocalDOMWindow even works for RemoteDOMWindow, by correcting the
type casts for DOMWindow/LocalDOMWindow given an EventTarget.

* LayoutTests/platform/ios-site-isolation/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebCore/bindings/js/JSEventTargetCustom.h:
(WebCore::IDLOperation<JSEventTarget>::call):
* Source/WebCore/page/DOMWindow.h:
(isType):
* Source/WebCore/page/LocalDOMWindow.h:
(isType):

Canonical link: https://commits.webkit.org/304046@main